horizontal scrollbar in mobie version fixed by changing contact section width

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -81,7 +81,7 @@
     flex-direction: column;
     align-items: start;
     gap: 20px;
-    width: 50%;
+    max-width: 80%;
 }
 
 .contact-right label{
